Update packages, add readme.md

--- a/src/index.html
+++ b/src/index.html
@@ -1,117 +1,116 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="utf-8"/>
-	<title>Chess Game</title>
-	<meta name="author" content="Bartosz Kowal"/>
-	<meta name="description" content="Play the game of kings!"/>
-	<meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1"/>
-	<link rel="stylesheet" href="./css/style.css" type="text/css"/>
-</head>
+	<head>
+		<meta charset="utf-8" />
+		<title>Chess Game</title>
+		<meta name="author" content="Bartosz Kowal" />
+		<meta name="description" content="Play the game of kings!" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
+		<link rel="stylesheet" href="./css/style.css" type="text/css" />
+	</head>
 
-<body>
-<header>
-	<div class="header">CHESS GAME</div>
-</header>
+	<body>
+		<header>
+			<div class="header">CHESS GAME</div>
+		</header>
 
-<main>
-	<article>
-		<div class="container">
-			<div class="descriptionT" id="dt1">A</div>
-			<div class="descriptionT" id="dt2">B</div>
-			<div class="descriptionT" id="dt3">C</div>
-			<div class="descriptionT" id="dt4">D</div>
-			<div class="descriptionT" id="dt5">E</div>
-			<div class="descriptionT" id="dt6">F</div>
-			<div class="descriptionT" id="dt7">G</div>
-			<div class="descriptionT" id="dt8">H</div>
-			<div class="descriptionL" id="dl1">1</div>
-			<div class="tale" id="11"></div>
-			<div class="tale" id="12"></div>
-			<div class="tale" id="13"></div>
-			<div class="tale" id="14"></div>
-			<div class="tale" id="15"></div>
-			<div class="tale" id="16"></div>
-			<div class="tale" id="17"></div>
-			<div class="tale" id="18"></div>
-			<div class="descriptionL" id="dl2">2</div>
-			<div class="tale" id="21"></div>
-			<div class="tale" id="22"></div>
-			<div class="tale" id="23"></div>
-			<div class="tale" id="24"></div>
-			<div class="tale" id="25"></div>
-			<div class="tale" id="26"></div>
-			<div class="tale" id="27"></div>
-			<div class="tale" id="28"></div>
-			<div class="descriptionL" id="dl3">3</div>
-			<div class="tale" id="31"></div>
-			<div class="tale" id="32"></div>
-			<div class="tale" id="33"></div>
-			<div class="tale" id="34"></div>
-			<div class="tale" id="35"></div>
-			<div class="tale" id="36"></div>
-			<div class="tale" id="37"></div>
-			<div class="tale" id="38"></div>
-			<div class="descriptionL" id="dl4">4</div>
-			<div class="tale" id="41"></div>
-			<div class="tale" id="42"></div>
-			<div class="tale" id="43"></div>
-			<div class="tale" id="44"></div>
-			<div class="tale" id="45"></div>
-			<div class="tale" id="46"></div>
-			<div class="tale" id="47"></div>
-			<div class="tale" id="48"></div>
-			<div class="descriptionL" id="dl5">5</div>
-			<div class="tale" id="51"></div>
-			<div class="tale" id="52"></div>
-			<div class="tale" id="53"></div>
-			<div class="tale" id="54"></div>
-			<div class="tale" id="55"></div>
-			<div class="tale" id="56"></div>
-			<div class="tale" id="57"></div>
-			<div class="tale" id="58"></div>
-			<div class="descriptionL" id="dl6">6</div>
-			<div class="tale" id="61"></div>
-			<div class="tale" id="62"></div>
-			<div class="tale" id="63"></div>
-			<div class="tale" id="64"></div>
-			<div class="tale" id="65"></div>
-			<div class="tale" id="66"></div>
-			<div class="tale" id="67"></div>
-			<div class="tale" id="68"></div>
-			<div class="descriptionL" id="dl7">7</div>
-			<div class="tale" id="71"></div>
-			<div class="tale" id="72"></div>
-			<div class="tale" id="73"></div>
-			<div class="tale" id="74"></div>
-			<div class="tale" id="75"></div>
-			<div class="tale" id="76"></div>
-			<div class="tale" id="77"></div>
-			<div class="tale" id="78"></div>
-			<div class="descriptionL" id="dl8">8</div>
-			<div class="tale" id="81"></div>
-			<div class="tale" id="82"></div>
-			<div class="tale" id="83"></div>
-			<div class="tale" id="84"></div>
-			<div class="tale" id="85"></div>
-			<div class="tale" id="86"></div>
-			<div class="tale" id="87"></div>
-			<div class="tale" id="88"></div>
-			<div style="clear:both;"></div>
-		</div>
-		<div class="info">White to move, have a nice game!</div>
-		<div class="result">White pieces: 16, black pieces: 16</div>
-	</article>
-</main>
+		<main>
+			<article>
+				<div class="container">
+					<div class="descriptionT" id="dt1">A</div>
+					<div class="descriptionT" id="dt2">B</div>
+					<div class="descriptionT" id="dt3">C</div>
+					<div class="descriptionT" id="dt4">D</div>
+					<div class="descriptionT" id="dt5">E</div>
+					<div class="descriptionT" id="dt6">F</div>
+					<div class="descriptionT" id="dt7">G</div>
+					<div class="descriptionT" id="dt8">H</div>
+					<div class="descriptionL" id="dl1">1</div>
+					<div class="tale" id="11"></div>
+					<div class="tale" id="12"></div>
+					<div class="tale" id="13"></div>
+					<div class="tale" id="14"></div>
+					<div class="tale" id="15"></div>
+					<div class="tale" id="16"></div>
+					<div class="tale" id="17"></div>
+					<div class="tale" id="18"></div>
+					<div class="descriptionL" id="dl2">2</div>
+					<div class="tale" id="21"></div>
+					<div class="tale" id="22"></div>
+					<div class="tale" id="23"></div>
+					<div class="tale" id="24"></div>
+					<div class="tale" id="25"></div>
+					<div class="tale" id="26"></div>
+					<div class="tale" id="27"></div>
+					<div class="tale" id="28"></div>
+					<div class="descriptionL" id="dl3">3</div>
+					<div class="tale" id="31"></div>
+					<div class="tale" id="32"></div>
+					<div class="tale" id="33"></div>
+					<div class="tale" id="34"></div>
+					<div class="tale" id="35"></div>
+					<div class="tale" id="36"></div>
+					<div class="tale" id="37"></div>
+					<div class="tale" id="38"></div>
+					<div class="descriptionL" id="dl4">4</div>
+					<div class="tale" id="41"></div>
+					<div class="tale" id="42"></div>
+					<div class="tale" id="43"></div>
+					<div class="tale" id="44"></div>
+					<div class="tale" id="45"></div>
+					<div class="tale" id="46"></div>
+					<div class="tale" id="47"></div>
+					<div class="tale" id="48"></div>
+					<div class="descriptionL" id="dl5">5</div>
+					<div class="tale" id="51"></div>
+					<div class="tale" id="52"></div>
+					<div class="tale" id="53"></div>
+					<div class="tale" id="54"></div>
+					<div class="tale" id="55"></div>
+					<div class="tale" id="56"></div>
+					<div class="tale" id="57"></div>
+					<div class="tale" id="58"></div>
+					<div class="descriptionL" id="dl6">6</div>
+					<div class="tale" id="61"></div>
+					<div class="tale" id="62"></div>
+					<div class="tale" id="63"></div>
+					<div class="tale" id="64"></div>
+					<div class="tale" id="65"></div>
+					<div class="tale" id="66"></div>
+					<div class="tale" id="67"></div>
+					<div class="tale" id="68"></div>
+					<div class="descriptionL" id="dl7">7</div>
+					<div class="tale" id="71"></div>
+					<div class="tale" id="72"></div>
+					<div class="tale" id="73"></div>
+					<div class="tale" id="74"></div>
+					<div class="tale" id="75"></div>
+					<div class="tale" id="76"></div>
+					<div class="tale" id="77"></div>
+					<div class="tale" id="78"></div>
+					<div class="descriptionL" id="dl8">8</div>
+					<div class="tale" id="81"></div>
+					<div class="tale" id="82"></div>
+					<div class="tale" id="83"></div>
+					<div class="tale" id="84"></div>
+					<div class="tale" id="85"></div>
+					<div class="tale" id="86"></div>
+					<div class="tale" id="87"></div>
+					<div class="tale" id="88"></div>
+					<div style="clear: both"></div>
+				</div>
+				<div class="info">White to move, have a nice game!</div>
+				<div class="result">White pieces: 16, black pieces: 16</div>
+			</article>
+		</main>
 
-<footer>
-	<div class="footer">
-		<p>Created by <span>Bartosz Kowal</span> &copy 2021</p>
-		<p><a href="https://github.com/barkow96" target="blank">Click to check out my GITHUB profile</a></p>
-	</div>
-</footer>
+		<footer>
+			<div class="footer">
+				<p>Created by <span>Bartosz Kowal</span> &copy 2021</p>
+				<p><a href="https://github.com/barkow96" target="blank">Click to check out my GITHUB profile</a></p>
+			</div>
+		</footer>
 
-<script src="./main.js" type="module"></script>
-</body>   
+		<script src="./main.js" type="module"></script>
+	</body>
 </html>
-© 2021 GitHub, Inc.
