--- a/src/index.html
+++ b/src/index.html
@@ -115,6 +115,6 @@
       </div>
     </footer>
 
-    <script src="./main.js" type="module"></script>
+    <script src="./main.ts" type="module"></script>
   </body>
 </html>
