--- a/src/index.html
+++ b/src/index.html
@@ -106,8 +106,10 @@
 
     <footer>
       <div class="footer">
-        <p>Created by <span>Bartosz Kowal</span> &copy 2021</p>
-        <p>Updated &copy 2026</p>
+        <p>
+          Created by <span>Bartosz Kowal</span> &copy 2021, updated &copy 2026
+        </p>
+
         <p>
           <a href="https://github.com/barkow96" target="blank"
             >Click to check out my GITHUB profile</a
