--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 
   <body>
     <header>
-      <div class="header">CHESS GAME</div>
+      <div class="header">Chess Game</div>
     </header>
 
     <main>
